--- a/Project2/PizzaWeb/Views/Shared/_LoginPartial.cshtml
+++ b/Project2/PizzaWeb/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,11 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li style="display: inline; margin-right: 20px;">
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                    Hello @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname
+                    @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname!
+ 
+                </a>
             </li>
             <li style="display: inline;">
                 <button type="submit" style="font-size: 15px;"><b>Logout</b></button>
