--- a/Project2/PizzaWeb/Views/Customers/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Customers/Create.cshtml
@@ -1,5 +1,8 @@
-﻿@model PizzaAPI.Model.Customer
+﻿@using Microsoft.AspNetCore.Identity
+@using PizzaWeb.Data;
+@model PizzaAPI.Model.Customer
 
+@inject UserManager<ApplicationUser> UserManager
 @{
     ViewData["Title"] = "Create";
 }
@@ -12,11 +15,20 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label class="control-label"> First name: </label>
+                @UserManager.Users.First().Firstname
             </div>
+            <div class="form-group">
+                <label class="control-label"> Last name: </label>
+                @UserManager.Users.First().Lastname
+            </div>
+            <div class="form-group">
+                <label class="control-label"> Email: </label>
+                @UserManager.Users.First().Email
+            </div>
+
             <div class="form-group">
                 <label asp-for="PhoneNo" class="control-label"></label>
                 <input asp-for="PhoneNo" class="form-control" />
@@ -27,6 +39,7 @@
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
