--- a/Project2/PizzaWeb/Views/Orders/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Create.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PizzaAPI.Model.Order
-
+@using Microsoft.AspNetCore.Identity
+@using PizzaWeb.Data;
+@inject UserManager<ApplicationUser> UserManager
 @{
     ViewData["Title"] = "Create";
 }
@@ -16,16 +18,6 @@
                 <label asp-for="TotalPrice" class="control-label"></label>
                 <input asp-for="TotalPrice" class="form-control" />
                 <span asp-validation-for="TotalPrice" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OrderDate" class="control-label"></label>
-                <input asp-for="OrderDate" class="form-control" />
-                <span asp-validation-for="OrderDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Duetime" class="control-label"></label>
-                <input asp-for="Duetime" class="form-control" />
-                <span asp-validation-for="Duetime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
