--- a/Project2/PizzaWeb/Views/Orders/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Index.cshtml
@@ -1,17 +1,43 @@
 ﻿@model IEnumerable<PizzaAPI.Model.Order>
+@using Microsoft.AspNetCore.Identity
+@using PizzaWeb.Data;
 
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cart";
 }
 
-<h2>Index</h2>
+<h2>Cart</h2>
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</environment>
+<environment exclude="Development">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+          asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+          asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+</environment>
+<style>
+    #table {
+        padding-top: 100px;
+    }
 
+    h2 {
+        padding-top: 90px;
+    }
+</style>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+@ViewBag.CustomerID
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
@@ -21,27 +47,45 @@
             <th>
                 @Html.DisplayNameFor(model => model.Duetime)
             </th>
+            <td>
+                @Html.DisplayNameFor(model => model.Pizza)
+            </td>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duetime)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+        @foreach (var item in Model)
+        {
+           <!-- if (UserManager.Users.FirstOrDefault(m => m.UserName == UserManager.GetUserName(User)).Id == item.Customer.UserId) {
+               -->
+
+
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Customer.CustomerId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TotalPrice)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.OrderDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Duetime)
+                    </td>
+                    <td>
+
+                        @Html.DisplayFor(modelItem => item.Pizza) <br>
+
+
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
+                    </td>
+                </tr>
+                
+            }
+        </tbody>
 </table>
