--- a/Project2/PizzaWeb/Views/Customers/Details.cshtml
+++ b/Project2/PizzaWeb/Views/Customers/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserId)
+            @Html.DisplayNameFor(model => model.CustomerId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserId)
+            @Html.DisplayFor(model => model.CustomerId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PhoneNo)
@@ -31,6 +31,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CustomerId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
