--- a/Project2/PizzaWeb/Views/Customers/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Customers/Index.cshtml
@@ -17,6 +17,12 @@
     <thead>
         <tr>
             <th>
+                <label>First name</label><br/>
+            </th>
+            <th>
+                <label>Last name</label><br />
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.CustomerId)
             </th>
             <th>
@@ -34,22 +40,29 @@
         
             @if (UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Id == item.UserId)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CustomerId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname
+                    </td>
+                    <td>
+                        @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname
+                    </td>
+                    
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CustomerId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        <a asp-controller="Customers" asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
+                    </td>
+                </tr>
             }
         
         }
