--- a/Project2/PizzaWeb/Views/Shared/_Layout.cshtml
+++ b/Project2/PizzaWeb/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PizzaWeb</title>
-
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="~/css/Sp.css" />
     <style>
         #logo:hover {
