--- a/Project2/PizzaWeb/Views/Customers/Delete.cshtml
+++ b/Project2/PizzaWeb/Views/Customers/Delete.cshtml
@@ -44,6 +44,7 @@
         $.ajax({
             url: url,
             dataType: "json",
+            //headers: { 'Access-Control-Allow-Origin': 'http://localhost:44350' },
             type: "DELETE",
             contentType: 'application/json; charset=utf-8',
             //data: JSON.stringify({ id: 11 }),
