--- a/Project2/PizzaWeb/Views/Home/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Home/Index.cshtml
@@ -52,7 +52,8 @@
 
     <div id="btn1">
         <img src="~/images/819861.png" alt="image" />
-        <button id="item">TOP CHOICE</button>
+        
+        <a asp-action="TopChoice" id="item" >TOP CHOICE</a>
     </div>
     <div id="btn2">
         <img src="~/images/819861.png" alt="image" />
