--- a/Project2/PizzaWeb/Views/Orders/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Create.cshtml
@@ -16,7 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TotalPrice" class="control-label"></label>
-                <input asp-for="TotalPrice" class="form-control" />
+                <input id="TotalPrice" asp-for="TotalPrice" class="form-control" />
                 <span asp-validation-for="TotalPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -33,3 +33,29 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script>
+        $('#btn btn-default').on('click', function (e) {
+            console.log("yes");
+            var url = "http://localhost:56782/api/orders/";
+            var dataObject = JSON.stringify({
+                'TotalPrice': $('#TotalPrice').val(),
+            });
+            $.ajax({
+                url: url,
+                dataType: "json",
+                type: "POST",
+                contentType: 'application/json; charset=utf-8',
+                data: dataObject,
+                async: true,
+                processData: false,
+                cache: false,
+                success: function (dataObject) {
+                    alert('Success!');
+                },
+                error: function (xhr) {
+                    alert('error');
+                }
+            });
+        });
+  
+</script>
