joe project test

--- a/Project2/PizzaWeb/Views/Home/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
     </div>
     <div id="btn2">
         <img src="~/images/819861.png" alt="image" />
-        <a id="item">MAKE MY OWN</a>
+        <a id="item" href="http://localhost:63461/Pizzas">CUSTOM PIZZA</a>
     </div>
 
 
