--- a/Project2/PizzaWeb/Views/Pizzas/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Pizzas/Create.cshtml
@@ -27,40 +27,71 @@
         <h2>Create Pizza</h2>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="textbox">
                 <input asp-for="PizzaName"  placeholder="Pizza Name"/>
                 <span asp-validation-for="PizzaName" class="text-danger" ></span>
             </div>
+
             <div class="textbox">
                 <label asp-for="Size" class="control-label"></label>
-                <select asp-for="Size" ></select>
+                
+                <select asp-for="Size">
+
+                    <option value="@Size.Small">Small</option>
+                    <option value="@Size.Medium">Medium</option>
+                    <option value="@Size.Large">Large</option>
+
+                </select>
+
                 <span asp-validation-for="Size" class="text-danger"></span>
             </div>
+
             <div class="textbox">
                 <label asp-for="Crust" class="control-label"></label>
-                <select asp-for="Crust" ></select>
+                <select asp-for="Crust">
+
+                    <option value="@Crust.cheeseCrust">Cheese Crust</option>
+                    <option value="@Crust.thickCrust">Thick Crust</option>
+                    <option value="@Crust.thinCrust">Thin Crust</option>
+
+                </select>
                 <span asp-validation-for="Crust" class="text-danger"></span>
             </div>
+
             <div class="textbox">
                 <label asp-for="Sauce" class="control-label"></label>
-                <select asp-for="Sauce" ></select>
+                <select asp-for="Sauce">
+
+                    <option value="@Sauce.garlicSauce"> Garlic Sauce</option>
+                    <option value="@Sauce.tomatoeSauce"> Tomato Sauce</option>
+
+                </select>
                 <span asp-validation-for="Sauce" class="text-danger"></span>
             </div>
+
             <div class="textbox">
                 <label asp-for="Topping1" class="control-label"></label>
-                <input asp-for="Topping1" />
+                <select asp-for="Topping1" >
+
+                    <option></option>
+
+                </select>
                 <span asp-validation-for="Topping1" class="text-danger"></span>
             </div>
+
             <div class="textbox">
                 <label asp-for="Topping2" class="control-label"></label>
                 <input asp-for="Topping2"  />
                 <span asp-validation-for="Topping2" class="text-danger"></span>
             </div>
+
             <div class="textbox">
                 <label asp-for="Topping3" class="control-label"></label>
                 <input asp-for="Topping3" />
                 <span asp-validation-for="Topping3" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn" />
             </div>
