--- a/Project2/PizzaWeb/Views/Payments/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Payments/Index.cshtml
@@ -50,29 +50,32 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                <tr>
-                    <td>
-                        @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname
-                    </td>
-                    <td>
-                        @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname
-                    </td>
-                    <td>
-                        @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Email
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CardNo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Customer.CustomerId)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.PaymentId">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.PaymentId">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.PaymentId">Delete</a>
-                    </td>
-                </tr>
-                }
-            </tbody>
+                    @if (item!=null && UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Id == item.Customer.UserId)
+                    {
+                        <tr>
+                            <td>
+                                @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname
+                            </td>
+                            <td>
+                                @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname
+                            </td>
+                            <td>
+                                @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Email
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CardNo)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Customer.CustomerId)
+                            </td>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.PaymentId">Edit</a> |
+                                <a asp-action="Details" asp-route-id="@item.PaymentId">Details</a> |
+                                <a asp-action="Delete" asp-route-id="@item.PaymentId">Delete</a>
+                            </td>
+                        </tr>
+                        }
+                    }
+                </tbody>
         </table>
     </body>
