--- a/Project2/PizzaWeb/Views/Orders/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Index.cshtml
@@ -79,7 +79,8 @@
                         <td>
                             <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
                             <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
+                            <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a> |
+                            <a asp-controller="Payments" asp-action="Create" asp-route-id="@item.OrderId">Checkout</a>
                         </td>
                     </tr>
 
