--- a/Project2/PizzaWeb/Views/Payments/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Payments/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model PizzaAPI.Model.Payment
+﻿
+@model PizzaAPI.Model.OrderPaymentVM
 @using Microsoft.AspNetCore.Identity
 @using PizzaWeb.Data;
 @inject UserManager<ApplicationUser> UserManager
@@ -109,8 +110,9 @@
     .col-25 {
         margin-bottom: 20px;
     }
-    h4{
-        padding-top:110px;
+
+    h4 {
+        padding-top: 110px;
     }
 </style>
 
@@ -130,10 +132,12 @@
                         <input type="text" id="fname" name="firstname" value="@UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname">
                         <label for="email"><i class="fa fa-envelope"></i> Email</label>
                         <input type="text" id="email" name="email" value="@UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Email">
-                        <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-                        <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-
-                    </div>
+                        @if (Model.order != null)
+                        {
+                            <label for="address"><i class="fa-address"></i> Address</label>
+                            <input type="text" id="address" name="addresss" value = "@this.Model.order.Customer.Address" readonly>
+                        }
+                        </div>
 
                     <div class="col-50">
                         <h3>Payment</h3>
@@ -147,9 +151,9 @@
                         <label for="cname">Name on Card</label>
                         <input type="text" id="cname" name="cardname" value="@UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname">
                         <div class="form-group">
-                            <label asp-for="CardNo" class="control-label">Credit card number</label>
-                            <input asp-for="CardNo" class="form-control" placeholder="1111-2222-3333-4444" />
-                            <span asp-validation-for="CardNo" class="text-danger"></span>
+                            <label asp-for="payment.CardNo" class="control-label">Credit card number</label>
+                            <input asp-for="payment.CardNo" class="form-control" placeholder="1111-2222-3333-4444" />
+                            <span asp-validation-for="payment.CardNo" class="text-danger"></span>
                         </div>
                     </div>
 
@@ -166,13 +170,26 @@
     </div>
     <div class="col-25">
         <div class="container">
-            <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-            <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-            <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-            <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-            <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+            @{ int quantity = 0; if (this.Model.order.Pizza != null || this.Model.order.Pizza.Count() != 0) { quantity = this.Model.order.Pizza.Count(); } }
+            <div class="form-group">
+                <label asp-for="order.OrderId" class="control-label">Credit card number</label>
+                <input asp-for="order.OrderId" class="form-control" value="@Model.order.OrderId" />
+                <span asp-validation-for="order.OrderId" class="text-danger"></span>
+            </div>
+            <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>@quantity</b></span></h4>
+            @if (this.Model.order.Pizza != null || this.Model.order.Pizza.Count() != 0)
+            {
+                @foreach (var item in this.Model.order.Pizza)
+                {
+                    <tr>
+                        <td>
+                            <p><a href="#">@Html.DisplayFor(modelItem => item.PizzaName)</a> <span class="price">$</span></p>
+                        </td>
+                    </tr>
+                }
+            }
             <hr>
-            <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+            <p>Total <span class="price" style="color:black"><b>@Html.DisplayFor(model => model.order.TotalPrice)</b></span></p>
         </div>
     </div>
 </div>
