--- a/Project2/PizzaWeb/Views/Pizzas/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Pizzas/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    
 }
 
 <h2>Create</h2>
@@ -10,54 +11,74 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-controller="Shoppingcart" asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PizzaName" class="control-label"></label>
-                <input asp-for="PizzaName" class="form-control" />
+                <input type="radio" name="PizzaName" value="@PizzaName.chickenPizza" />Chicken Pizza
+                <input type="radio" name="PizzaName" value="@PizzaName.pepperoniePizza" />Pepperonie Pizza
+                <input type="radio" name="PizzaName" value="@PizzaName.veggePizza" />Veggie Pizza
+                <input type="radio" name="PizzaName" value="@PizzaName.Custom" checked />Custom Pizza
                 <span asp-validation-for="PizzaName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Size" class="control-label"></label>
-                <select asp-for="Size" class="form-control"></select>
+                <!--<select asp-for="Size" class="form-control"></select-->
+                <input type="radio" name="Size" value="@Size.Small" />Small
+                <input type="radio" name="Size" value="@Size.Medium" checked />Medium
+                <input type="radio" name="Size" value="@Size.Large" />Large
                 <span asp-validation-for="Size" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Crust" class="control-label"></label>
-                <select asp-for="Crust" class="form-control"></select>
+                <!--<select asp-for="Crust" class="form-control"></select-->
+                <input type="radio" name="Crust" value="@Crust.cheeseCrust" checked />Cheese Crust
+                <input type="radio" name="Crust" value="@Crust.thickCrust" />Thick Crust
+                <input type="radio" name="Crust" value="@Crust.thinCrust" />Thin Crust
                 <span asp-validation-for="Crust" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Sauce" class="control-label"></label>
-                <select asp-for="Sauce" class="form-control"></select>
+                <!--<select asp-for="Sauce" class="form-control"></select>-->
+                <input type="radio" name="Sauce" value="@Sauce.garlicSauce" />Garlic Sauce
+                <input type="radio" name="Sauce" value="@Sauce.tomatoeSauce" checked/>Tomatoe Sauce
+
                 <span asp-validation-for="Sauce" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Topping1" class="control-label"></label>
-                <input asp-for="Topping1" class="form-control" />
+                <!--<input asp-for="Topping1" class="form-control" /-->
+                <input type="radio" name="Topping1" value="@Topping.beef" checked />beef
+                <input type="radio" name="Topping1" value="@Topping.chicken" />chicken
+                <input type="radio" name="Topping1" value="@Topping.pork" />pork
                 <span asp-validation-for="Topping1" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Topping2" class="control-label"></label>
-                <input asp-for="Topping2" class="form-control" />
+                <input type="radio" name="Topping2" value="@Topping.beef" checked />beef
+                <input type="radio" name="Topping2" value="@Topping.chicken" />chicken
+                <input type="radio" name="Topping2" value="@Topping.pork" />pork
                 <span asp-validation-for="Topping2" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Topping3" class="control-label"></label>
-                <input asp-for="Topping3" class="form-control" />
+                <input type="radio" name="Topping3" value="@Topping.beef" checked />beef
+                <input type="radio" name="Topping3" value="@Topping.chicken" />chicken
+                <input type="radio" name="Topping3" value="@Topping.pork" />pork
                 <span asp-validation-for="Topping3" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
